--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -239,7 +239,6 @@ en:
         icon: Icon
         default_quantity: Default quantity
         default_capacity: Default capacity
-        default_initial_load: Default maximum initial load
         operation_fill: Fill
         operation_empty: Empty
         optimization_overload_multiplier: Overload coefficient
@@ -1146,7 +1145,6 @@ en:
       ref_help: A free reference
       default_quantity_help: Quantity to deliver for all your visits (keep empty if no quantity).
       default_capacity_help: Capacity for all your vehicles (keep empty if no limit).
-      default_initial_load_help: Default maximum initial load available for all your vehicle tours (leave empty if no initial load).
       optimization_overload_multiplier_no: 'No'
       optimization_overload_multiplier_no_help: >-
         During optimisation, if you set some capacities for your vehicles,
@@ -2478,8 +2476,6 @@ en:
       consumption_desc: average fuel consumption in liters per 100 km
       capacities: capacities
       capacities_desc: maximum vehicle's capacities
-      capacities_initial_loads: maximum loading available
-      capacities_initial_loads_desc: maximum load available for the vehicle at the start of the tour
       custom_attributes: attributes
       router_mode: routing engine
       router_mode_desc: force use of a specific routing engine
@@ -2529,7 +2525,7 @@ en:
         help: Average fuel consumption in liters per 100 km
         help_miles: Average fuel consumption in liters per 62.1 mi.
       capacities:
-        label: Maximum initial load / Capacities
+        label: Capacities
         default: '%{n} (default value)'
         no_overload: ' (no overload)'
         ignore_overload: ' (ignored)'
