Make quantity fields as jsonb instead of hstore

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -619,6 +619,7 @@ en:
           attributes:
             capacities:
               not_float: must be a number
+              not_integer: must be an integer value
               negative_value: 'must be positive value (%{value})'
         vehicles:
           at_least_one: At least one vehicle needed
