--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1376,6 +1376,8 @@ fr:
       stop_type_desc: 'type d''arrêt dans la tournée. La valeur par défaut est [visite]'
       stop_type_visit: visite
       stop_type_visit_desc: ''
+      stop_type_store: site
+      stop_type_store_desc: ''
       stop_format: '[visite | site | pause]'
       name: nom
       name_desc: 'nom du client, de l''adresse ou du point d''intérêt'
